--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "nodemailer": "^2.1.0",
     "serve-favicon": "~2.3.0"
   }
 }
