--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "scripts": {
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lucykang/Portfolio-Website"
+  },
+  "author": "Hae Yeon (Lucy) Kang",
+  "description": "A project for portfolio website",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -14,5 +21,18 @@
     "morgan": "~1.6.1",
     "nodemailer": "^2.1.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-connect": "^2.3.1",
+    "gulp-debug": "^2.1.2",
+    "gulp-inject": "^3.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-open": "^1.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.11.0",
+    "gulp-util": "^3.0.7",
+    "typescript": "^1.7.5"
   }
 }
